[package]
name = "gt-engine"
version = "0.1.0"
authors = ["ashtyn3 <ashtynmorel@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[toolchain]
channel = "nightly"

[dependencies]
wasm-bindgen = "0.2.80"
array-macro = "2.1.3"
rayon = {version = "1.5" }
wasm-bindgen-rayon = { version = "1.0" }
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
